Sticky the recipe name to the top of the page
Help the reader easily know which recipe they are looking at.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ ol > li > ul {
 h1 {
   border-bottom: solid black;
   text-align: center;
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
 
 h2 {
